syntax = "proto3";

option java_package = "msg.userhandler";
option java_multiple_files = true;

package userhandler;

// Handles all things user
service UserHandler {
  // Sends a greeting
  rpc login (LoginRequest) returns (LoginResponse) {}
}

message LoginRequest {
  
}

message LoginResponse {
	bytes jwt = 1;
}